--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "jshint": "node_modules/.bin/jshint rc4.js test",
-    "mocha": "node_modules/.bin/_mocha --reporter=spec test",
-    "istanbul": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha test",
-    "check-coverage": "node_modules/.bin/istanbul check-coverage --statements 100 --branches 100 --functions 100 coverage/coverage.json",
-    "test": "npm run jshint && npm run mocha && npm run istanbul && npm run check-coverage"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
