--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "homepage": "https://github.com/phadej/rc4",
   "devDependencies": {
+    "david": "^6.1.4",
+    "eslint": "^0.15.0",
     "istanbul": "^0.3.6",
+    "jscs": "^1.11.3",
     "jshint": "^2.6.0",
     "mocha": "^2.1.0"
   }
